--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
 
 @font-face {
   font-family: "Rubik";
-  src: url("../../fonts/static/Rubik-Medium.ttf") format("truetype");
+  src: url("../../fonts/static/Rubik-Medium.ttf") format("ttf");
 }
 
 body {
