--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* start global rules  */
 @import "tailwindcss";
+
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
@@ -8,7 +9,7 @@
 
 @font-face {
   font-family: "Rubik";
-  src: url("../../fonts/static/Rubik-Medium.ttf") format("ttf");
+  src: url("./assets/fonts/static/Rubik-Medium.ttf") ;
 }
 
 body {
